added drop shadow filter

--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
         <h3>ETQ Platform at the Core of our QMS Software</h3>
         <h3>Built on the ETQ Platform are our Solution Sets—Best-in-Class Processes Work-Flows</h3>
     </div>
-    <div id="product-wheel">
+    <div id="product-wheel" style="filter:url(#shadow);">
     <svg id="wheel" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 890.34 892.64">
-
+      <defs>
+        <filter id="shadow">
+          <feDropShadow dx="4" dy="6" stdDeviation="4" flood-color="#ccc"/>
+        </filter>
+      </defs>
       <!-- core background -->
       <path class="core_background" d="M550.94 445.55h148.65a249 249 0 0 0-33.06-123.95l-125.85 72.66-.75-1.48 125.76-72.61a251.41 251.41 0 0 0-90.92-90.74l-71.59 124-1.42-.85 71.57-124A249 249 0 0 0 449.4 195.8h-.56v143l-1.66.06v-143a248.89 248.89 0 0 0-138.84 43.51l81.92 120-1.31 1L307 240.28a251.29 251.29 0 0 0-83 97l134.07 64.5-.6 1.54-134.19-64.52a249 249 0 0 0-24 100.52c0 1.82-.07 3.64-.07 5.47v.76h151.97c0 .55.07 1.1.12 1.65h-152a250.18 250.18 0 0 0 33.42 123l134-77.37c.3.47.6.93.91 1.39l-134.06 77.4a252.54 252.54 0 0 0 89.81 90L401.65 526l1.44.81-78.32 135.62a250.17 250.17 0 0 0 122.41 33.69V538.93l1.66.05v157.16h2.56c2.53 0 5.07 0 7.58-.14h.15a248.86 248.86 0 0 0 129.92-42.38l-87.52-128.25c.48-.28 1-.56 1.43-.85l87.46 128.16a251.36 251.36 0 0 0 83.87-96.93l-137-65.92c.28-.48.56-.95.83-1.43L675 554.26a249.08 249.08 0 0 0 24.58-107.06H550.82q.08-.82.12-1.65z" />
 
